--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.6.3",
-    "nodemon": "^2.0.20",
     "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
